--- a/advancedFunctions.html
+++ b/advancedFunctions.html
@@ -812,19 +812,18 @@ They can be saved to variables:</p>
 
 <p>It is often desirable to create generalized functions which take callback functions. We can use these generalized functions, often called <strong>utility functions</strong>, to compose higher order functions which do more specific tasks.</p>
 
-<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> <span class="pl-en">increment</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">n</span>){ <span class="pl-k">return</span> n <span class="pl-k">+</span> <span class="pl-c1">1</span>; };
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> <span class="pl-en">doMathSoIDontHaveTo</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">n</span>, <span class="pl-smi">func</span>){ <span class="pl-k">return</span> <span class="pl-en">func</span>(n); };
+
+<span class="pl-k">var</span> <span class="pl-en">increment</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">n</span>){ <span class="pl-k">return</span> n <span class="pl-k">+</span> <span class="pl-c1">1</span>; };
 
 <span class="pl-k">var</span> <span class="pl-en">square</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">n</span>){ <span class="pl-k">return</span> n<span class="pl-k">*</span>n; };
 
-<span class="pl-k">var</span> <span class="pl-en">doMathSoIDontHaveTo</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">n</span>, <span class="pl-smi">func</span>){ <span class="pl-k">return</span> <span class="pl-en">func</span>(n); };
-
 <span class="pl-en">doMathSoIDontHaveTo</span>(<span class="pl-c1">5</span>, square);
-
 <span class="pl-en">doMathSoIDontHaveTo</span>(<span class="pl-c1">4</span>, increment);</pre></div>
 
 <p>Here's another example:</p>
 
-<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> <span class="pl-en">ifEven</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">condition</span>, <span class="pl-smi">isTrue</span>, <span class="pl-smi">isFalse</span>, <span class="pl-smi">arg</span>){
+<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> <span class="pl-en">ifThen</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">condition</span>, <span class="pl-smi">isTrue</span>, <span class="pl-smi">isFalse</span>, <span class="pl-smi">arg</span>){
   <span class="pl-k">if</span>(<span class="pl-en">condition</span> (arg)){
     <span class="pl-en">isTrue</span>(arg);
   } <span class="pl-k">else</span> {
@@ -838,7 +837,7 @@ They can be saved to variables:</p>
 
 <span class="pl-k">var</span> <span class="pl-en">oddOrEven</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">array</span>){
   <span class="pl-k">for</span> (<span class="pl-k">var</span> i <span class="pl-k">=</span> <span class="pl-c1">0</span>; i <span class="pl-k">&lt;</span> <span class="pl-smi">array</span>.<span class="pl-c1">length</span>; i<span class="pl-k">++</span>){
-    array[i] <span class="pl-k">=</span> <span class="pl-en">ifEven</span>(number); 
+    array[i] <span class="pl-k">=</span> <span class="pl-en">ifThen</span>(number); 
   }
 }
 </pre></div>
