Fixed some demo exercises

--- a/advancedFunctionsExercises.html
+++ b/advancedFunctionsExercises.html
@@ -826,8 +826,8 @@ output<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</spa
 <div class="highlight highlight-source-js"><pre>input<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>abcdc<span class="pl-pds">'</span></span>
 output<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>c<span class="pl-pds">'</span></span>
 
-input<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>occurring<span class="pl-pds">"</span></span><span class="pl-s"></span>
-<span class="pl-s"><span class="pl-ii">output: "cr"</span></span></pre></div>
+input<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>occurring<span class="pl-pds">"</span></span>
+output<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>cr<span class="pl-pds">"</span></span></pre></div>
 
 <p>​</p>
 
