--- a/advancedFunctions.html
+++ b/advancedFunctions.html
@@ -824,31 +824,37 @@ They can be saved to variables:</p>
 <p>Here's another example:</p>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> <span class="pl-en">ifThen</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">condition</span>, <span class="pl-smi">isTrue</span>, <span class="pl-smi">isFalse</span>, <span class="pl-smi">arg</span>){
-  <span class="pl-k">if</span>(<span class="pl-en">condition</span> (arg)){
-    <span class="pl-en">isTrue</span>(arg);
+  <span class="pl-k">if</span>(<span class="pl-en">condition</span>(arg)){
+    <span class="pl-k">return</span> <span class="pl-en">isTrue</span>(arg);
   } <span class="pl-k">else</span> {
-    <span class="pl-en">isFalse</span>(arg);
+    <span class="pl-k">return</span> <span class="pl-en">isFalse</span>(arg);
   }
 };
 
-<span class="pl-k">var</span> <span class="pl-en">condition</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> number <span class="pl-k">%</span> <span class="pl-c1">2</span> <span class="pl-k">===</span> <span class="pl-c1">0</span> };
-<span class="pl-k">var</span> <span class="pl-en">isTrue</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> <span class="pl-s"><span class="pl-pds">"</span>even<span class="pl-pds">"</span></span> };
-<span class="pl-k">var</span> <span class="pl-en">isFalse</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> <span class="pl-s"><span class="pl-pds">"</span>odd<span class="pl-pds">"</span></span>};
+<span class="pl-k">var</span> <span class="pl-en">isEven</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> number <span class="pl-k">%</span> <span class="pl-c1">2</span> <span class="pl-k">===</span> <span class="pl-c1">0</span> };
+<span class="pl-k">var</span> <span class="pl-en">double</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> number <span class="pl-k">*</span> <span class="pl-c1">2</span> };
+<span class="pl-k">var</span> <span class="pl-en">triple</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">number</span>){ <span class="pl-k">return</span> number <span class="pl-k">*</span> <span class="pl-c1">3</span>};
+
+<span class="pl-k">var</span> range <span class="pl-k">=</span> [<span class="pl-c1">1</span>,<span class="pl-c1">2</span>,<span class="pl-c1">3</span>,<span class="pl-c1">4</span>,<span class="pl-c1">5</span>,<span class="pl-c1">6</span>]; 
 
 <span class="pl-k">var</span> <span class="pl-en">oddOrEven</span> <span class="pl-k">=</span> <span class="pl-k">function</span>(<span class="pl-smi">array</span>){
   <span class="pl-k">for</span> (<span class="pl-k">var</span> i <span class="pl-k">=</span> <span class="pl-c1">0</span>; i <span class="pl-k">&lt;</span> <span class="pl-smi">array</span>.<span class="pl-c1">length</span>; i<span class="pl-k">++</span>){
-    array[i] <span class="pl-k">=</span> <span class="pl-en">ifThen</span>(number); 
+    array[i] <span class="pl-k">=</span> <span class="pl-en">ifThen</span>(isEven, evenString, oddString, array[i]); 
   }
 }
-</pre></div>
 
-<p>Let's refactor the last bit of code using forEach. forEach is chained to an array and takes one callback function as an argument.  The callback is called at each iteration with the current element of the array. </p>
+<span class="pl-en">oddOrEven</span>(range)<span class="pl-c">//[3, 4, 9, 8', 15, 12']</span></pre></div>
+
+<p>Let's take an example using forEach.  forEach is a native method of arrays that takes a callback function as an argument. The callback is called at each iteration with the current element of the array.  <em>Note</em> The callback is also passed the index and collection as optional arguments. </p>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-smi">array</span>.<span class="pl-en">forEach</span>(callback); 
 
 <span class="pl-k">var</span> range <span class="pl-k">=</span> [<span class="pl-c1">1</span>,<span class="pl-c1">2</span>,<span class="pl-c1">3</span>,<span class="pl-c1">4</span>,<span class="pl-c1">5</span>,<span class="pl-c1">6</span>];
+<span class="pl-k">var</span> <span class="pl-en">logger</span> <span class="pl-k">=</span> <span class="pl-k">function</span> (<span class="pl-smi">value</span>){
+  <span class="pl-en">console</span>.<span class="pl-c1">log</span>(value);
+}
 
-<span class="pl-smi">range</span>.<span class="pl-en">forEach</span>(<span class="pl-en">oddOrEven</span>(number)) <span class="pl-c">//['odd', 'even', 'odd', 'even','odd', 'even'];</span></pre></div>
+<span class="pl-smi">range</span>.<span class="pl-en">forEach</span>(<span class="pl-en">oddOrEven</span>(number)) <span class="pl-c">//['1','2','3','4','5','6'];</span></pre></div>
 
 <h1>
 <a id="user-content-scope" class="anchor" href="#scope" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Scope</h1>
