Reformatting on index.html

--- a/index.html
+++ b/index.html
@@ -734,8 +734,8 @@ pre {
 <h5>
 <a id="user-content-scope" class="anchor" href="#scope" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Scope</h5>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/SpecRunner.html">Scope Test Runner</a>
-<a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/scopeExercises.html">Test Runner Instructions</a></p>
+<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/SpecRunner.html">Scope Test Runner</a></p>
+<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/scopeExercises.html">Test Runner Instructions</a></p>
 
 <h5>
 <a id="user-content-closure" class="anchor" href="#closure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Closure</h5>
