Fixes links on index.html

--- a/index.html
+++ b/index.html
@@ -727,21 +727,21 @@ pre {
 <h5>
 <a id="user-content-advanced-functions" class="anchor" href="#advanced-functions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Advanced Functions</h5>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/advancedFunctions.html">Advanced Functions</a></p>
+<p><a href="advancedFunctions.html">Advanced Functions</a></p>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/advancedFunctionsExercises.html">Advanced Functions Exercises</a></p>
+<p><a href="advancedFunctionsExercises.html">Advanced Functions Exercises</a></p>
 
 <h5>
 <a id="user-content-scope" class="anchor" href="#scope" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Scope</h5>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/SpecRunner.html">Scope Test Runner</a></p>
+<p><a href="scope/SpecRunner.html">Scope Test Runner</a></p>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/scope/scopeExercises.html">Test Runner Instructions</a></p>
+<p><a href="scope/scopeExercises.html">Test Runner Instructions</a></p>
 
 <h5>
 <a id="user-content-closure" class="anchor" href="#closure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Closure</h5>
 
-<p><a href="/Users/Zan/Code/hack-reactor/remote-prep/advanced-functions/closureExercises.html">Closure Exercises</a></p>
+<p><a href="closureExercises.html">Closure Exercises</a></p>
 
 <h5>
 <a id="user-content-re-implementing-underscore" class="anchor" href="#re-implementing-underscore" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Re-implementing Underscore</h5>
